tdf#86630 sw page number wizard: mirror right/left
If the user puts the page numbers on the left or right
side of the page, they usually want that mirrored
on even and odd pages.

This got rather tricky, but in the end
I have enough safeguards that it seems
to work logically and stablely.
So I think it is ready to be submitted.

Change-Id: I321e575cd9f6718579ffee99f1258bffe26581f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151152
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151901
Tested-by: Justin Luth <jluth@mail.com>

--- a/sw/uiconfig/swriter/ui/pagenumberdlg.ui
+++ b/sw/uiconfig/swriter/ui/pagenumberdlg.ui
@@ -153,6 +153,26 @@
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkCheckButton" id="mirrorCheckbox">
+                    <property name="label" translatable="yes" context="numberingoptionspage|mirrorCheckbox">Mirror on even pages</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="use-underline">True</property>
+                    <property name="draw-indicator">True</property>
+                    <child internal-child="accessible">
+                      <object class="AtkObject" id="mirrorCheckbox-atkobject">
+                        <property name="AtkObject::accessible-description" translatable="yes" context="numberingoptionspage|extended_tip|mirrorCheckbox">Creates separate left/right pages with mirrored page number placements</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">4</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkLabel" id="numfmtLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
@@ -173,7 +193,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">4</property>
+                    <property name="position">5</property>
                   </packing>
                 </child>
                 <child>
@@ -192,7 +212,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">5</property>
+                    <property name="position">6</property>
                   </packing>
                 </child>
               </object>
