Resolves tdf#155039 - Color name not displayed with GTK3
Change-Id: I317a935c1e99c20f09cba8c24085d3a173d64dbe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151090
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/cui/uiconfig/ui/colorconfigwin.ui
+++ b/cui/uiconfig/ui/colorconfigwin.ui
@@ -50,6 +50,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -85,6 +86,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -125,6 +127,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -160,6 +163,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -203,6 +207,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -243,6 +248,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -278,6 +284,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -321,6 +328,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -361,6 +369,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -393,6 +402,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -428,6 +438,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -503,6 +514,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -538,6 +550,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -581,6 +594,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -621,6 +635,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -656,6 +671,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -696,6 +712,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -728,6 +745,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -760,6 +778,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -792,6 +811,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -859,6 +879,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -891,6 +912,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -923,6 +945,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -955,6 +978,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -987,6 +1011,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1004,6 +1029,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1036,6 +1062,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1068,6 +1095,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1100,6 +1128,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1132,6 +1161,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1164,6 +1194,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1196,6 +1227,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1246,6 +1278,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1289,6 +1322,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1314,6 +1348,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1386,6 +1421,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1453,6 +1489,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1485,6 +1522,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1517,6 +1555,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1549,6 +1588,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1581,6 +1621,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1613,6 +1654,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1645,6 +1687,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1677,6 +1720,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1744,6 +1788,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1776,6 +1821,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1808,6 +1854,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1840,6 +1887,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1872,6 +1920,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1904,6 +1953,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1936,6 +1986,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -2003,6 +2054,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -2050,6 +2102,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -2082,6 +2135,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -2114,6 +2168,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
